@@ -27,4 +27,4 @@ HOSTS:
 CONFIG:
   log_level: verbose
   type:      aio
-  vagrant_memsize: 256
+  vagrant_memsize: 1024
