@@ -63,8 +63,8 @@ describe 'auditd class with alternative audit profiles' do
         end
 
         it 'should be running the auditd service' do
-          result = on(host, 'puppet resource service auditd')
-          expect(result.output).to include("ensure => 'running'")
+          result = YAML.safe_load(on(host, 'puppet resource service auditd --to_yaml').stdout)
+          expect(result['service']['auditd']['ensure']).to eq('running')
         end
 
         it 'should load valid rules' do
@@ -88,8 +88,8 @@ describe 'auditd class with alternative audit profiles' do
         end
 
         it 'should be running the auditd service' do
-          result = on(host, 'puppet resource service auditd')
-          expect(result.output).to include("ensure => 'running'")
+          result = YAML.safe_load(on(host, 'puppet resource service auditd --to_yaml').stdout)
+          expect(result['service']['auditd']['ensure']).to eq('running')
         end
 
 
@@ -115,8 +115,8 @@ describe 'auditd class with alternative audit profiles' do
         end
 
         it 'should be running the auditd service' do
-          result = on(host, 'puppet resource service auditd')
-          expect(result.output).to include("ensure => 'running'")
+          result = YAML.safe_load(on(host, 'puppet resource service auditd --to_yaml').stdout)
+          expect(result['service']['auditd']['ensure']).to eq('running')
         end
 
         it 'should load valid rules' do
